# test

./: .gitignore  LICENSE  README.md  image_commpressed_debug.launch  rviz_format.rviz
agent/: CMakeLists.txt  package.xml
agent/include/: agent.hpp  agent_node.hpp  determining_input_value.hpp
agent/src/: agent.cpp  agent_node.cpp
bash_files/: develop_build.sh  readme.md  remote_0_setup.sh  remote_1_start.sh  remote_2_qr.sh  remote_3_record.sh  remote_4_rviz.sh  remote_5_robot_info.sh  remote_6_qr_output.sh  remote_setup.sh  remote_start.sh  robot_build.sh  robot_setup_and_start.sh
controller/: CMakeLists.txt  README.md  package.xml  ros_setup.sh
controller/include/: signal_publisher.hpp  signal_subscriber.hpp
controller/src/: driver.cpp  img_publisher.cpp  img_publisher.cpp.save  img_subscriber.cpp  signal_publisher.cpp  signal_subscriber.cpp
joy_simple_operator/: CMakeLists.txt  joy_simple_operator_debug.launch  package.xml
joy_simple_operator/include/: joy_simple_operator.hpp
joy_simple_operator/src/: joy_debug.cpp  joy_simple_operator.cpp
kalman_filter/: CMakeLists.txt  package.xml
kalman_filter/include/: kalman_filter.hpp  kalman_filter_node.hpp
kalman_filter/src/: kalman_filter.cpp  kalman_filter_node.cpp
kurione_msgs/: CMakeLists.txt  package.xml
kurione_msgs/msg/: ModeCommand.msg  RobotInfo.msg
kurione_qr_reader/: CMakeLists.txt  package.xml  qr_reader.launch  qr_reader_debug.launch
kurione_qr_reader/_src/: qr_reader.cpp
kurione_qr_reader/scripts/: qr_reader.py
main/: package.xml
main/launch/: main.launch  rov_compessed_remote.launch  rov_debug.launch  rov_remote.launch  rov_robot.launch
serial_interface/: CMakeLists.txt  package.xml  serial_debug.launch
serial_interface/include/: codebook.hpp  communication.hpp  nucleo_driver.hpp  packet.hpp  serial_interface.hpp
serial_interface/src/: communication.cpp  nucleo_driver.cpp  serial_interface.cpp
test_kamiguchi/: CMakeLists.txt  package.xml  test_kamiguchi.launch
test_kamiguchi/include/: test_kamiguchi.hpp
test_kamiguchi/src/: test_kamiguchi.cpp
