<?xml version="1.0"?>
<package format="2">
  <name>serial_interface</name>
  <version>1.0.0</version>
  <description>This node send commands by USB-UART to move actuators.</description>

  <maintainer email="origane.y.aa@m.titech.ac.jp">YukiOrigane</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>kurione_msgs</build_depend>
</package>